--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="theme-color" content="#3b82f6">
+
+    <link rel="manifest" href="/manifest.json">
+    <link rel="icon" type="image/svg+xml" href="/app.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pay</title>
+    <meta name="description" content="Payments-App: Seamlessly manage transactions, transfer funds securely, and connect with friends effortlessly in one intuitive platform." />
+    <title>Payments-App</title>
+
   </head>
   <body>
     <div id="root"></div>
